카드 영수증 조회 기능 추가

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@page {
+  size: auto; /* auto is the initial value */
+
+  /* this affects the margin in the printer settings */
+  margin: 20mm;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
