--- a/src/components/(shared)/backdrop/backdrop.module.scss
+++ b/src/components/(shared)/backdrop/backdrop.module.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  top: 0px;
+  top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
@@ -10,8 +10,8 @@
 
 @keyframes ani {
   from {
-    background-color: rgba($color: #000000, $alpha: 0.0);
-    // opacity: 0;
+    background-color: rgba($color: #000000, $alpha: 0);
+    opacity: 0;
   }
 
   to {
