--- a/src/components/(shared)/backdrop/backdrop.module.scss
+++ b/src/components/(shared)/backdrop/backdrop.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 1001;
   animation: ani 0.3s ease-in forwards;
 }
