--- a/src/app/global.css
+++ b/src/app/global.css
@@ -8,6 +8,7 @@
   /* this affects the margin in the printer settings */
   margin: 20mm;
 }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -94,5 +95,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@layer utilities {
+  .animate-slide-down {
+    animation: slideDownAnimation 0.5s ease-in forwards;
+  }
+}
+
+@keyframes slideDownAnimation {
+  0% {
+    max-height: 0;
+  }
+
+  100% {
+    max-height: 80%;
+    overflow-y: auto;
   }
 }
