--- a/src/app/global.css
+++ b/src/app/global.css
@@ -102,6 +102,14 @@
   .animate-slide-down {
     animation: slideDownAnimation 0.5s ease-in forwards;
   }
+
+  .animate-modal-slide-down {
+    animation: modalSlideDownAnimation 0.3s ease-out forwards;
+  }
+
+  .animate-backdrop {
+    animation: backdropAnimation 0.3s ease-in forwards;
+  }
 }
 
 @keyframes slideDownAnimation {
@@ -112,5 +120,27 @@
   100% {
     max-height: 80%;
     overflow-y: auto;
+  }
+}
+
+@keyframes modalSlideDownAnimation {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes backdropAnimation {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  to {
+    background-color: rgba(0, 0, 0, 0.6);
   }
 }
