--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --radius-primary: 4px;
+  --cart-view-height: 5rem;
+  --header-height: 48px;
+}
+
 @page {
   size: auto; /* auto is the initial value */
 
@@ -157,4 +163,50 @@
   100% {
     transform: translateY(0%);
   }
+}
+
+*,
+html {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+body {
+  line-height: 1;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: var(--fs-xl);
+}
+
+h3 {
+  font-weight: bold;
+  font-size: var(--fs-lg);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: #fe4902;
+  -webkit-box-shadow: 0 0 0px 40rem #fff inset;
 }
